# tenancy-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TENANCY_ENGINEER_PLAYBOOK.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: README.md  __init__.py  env.py  script.py.mako
alembic/versions/: .gitkeep  20260201_0000_initial_tenant_schema.py
app/: main.py
app/api/cancellations/: __init__.py  routes.py
app/api/compliance/: __init__.py  routes.py
app/api/context/: __init__.py  routes.py
app/api/features/: __init__.py  routes.py
app/business/: __init__.py
app/db/: __init__.py
app/dependencies/: __init__.py  providers.py  tenant_context.py
app/infrastructure/: __init__.py  examples.py
app/middleware/: __init__.py  auth.py  rate_limit.py
app/schemas/: __init__.py  tenancy.py
docs/: ARCHITECTURE.md  ENDPOINTS.md  LOGGING_GUIDE.md  QUICK_START.md  RATE_LIMITING.md  SECURITY_CHECKLIST.md
domain/: __init__.py  models.py
infrastructure/: __init__.py
infrastructure/billing/: __init__.py  billing_service.py
infrastructure/config/: __init__.py
infrastructure/database/: __init__.py
infrastructure/messaging/: __init__.py
infrastructure/observability/: __init__.py  health.py  logging.py  metrics.py  tracing.py
infrastructure/persistence/: __init__.py  tenant_repository.py
tests/: __init__.py  conftest.py
tests/integration/: quick_test.py
tests/unit/: test_lifecycle_use_cases.py  test_tenant.py
(+64 files in other folders)
